--- a/templates/register.ejs
+++ b/templates/register.ejs
@@ -19,7 +19,7 @@
             <br>
             <label><b>Password: </b><input type="text" name="password" id="password"></label>
             <br>
-            <label><b>Confirm Password: </b><input type="text" name="password" id="confPassword"></label>
+            <label><b>Confirm Password: </b><input type="text" name="confPassword" id="confPassword"></label>
             <br>
             <input type="submit" value="Register" id="login">
         </fieldset>
