--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -12,7 +12,7 @@
 
     <h2>Login</h2>
 
-    <form id="loginForm" action="" method="post" onsubmit="return validateLogin()">
+    <form id="loginForm" action="" method="post" onsubmit="return validateLogin()" autocomplete="off">
         <%- error -%>
         <fieldset>
             <label><b>Username: </b><input type="text" name="username" id="username"></label>
