--- a/templates/register.ejs
+++ b/templates/register.ejs
@@ -12,7 +12,7 @@
 
     <h2>Register</h2>
 
-    <form id="registerForm" action="" method="post" onsubmit="return validateInfo(event)">
+    <form id="registerForm" action="" method="post" onsubmit="return validateInfo(event)" autocomplete="off">
         <%- error -%>
         <fieldset>
             <label><b>Username: </b><input type="text" name="username" id="username"></label>
